[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.2",
    "telethon>=1.42.0",
    "werkzeug>=3.1.7",
]
